bugfixing generation